--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,14 @@ nav a {
     margin: 20px 0;
 }
 
+.loading {
+    color: coral;
+    font-size: 20px;
+    display: flex;
+    justify-content: center;
+    margin: 30px 0;
+}
+
 .pagination {
     width: 500px;
     display: flex;
@@ -72,4 +80,21 @@ nav a {
     list-style: none;
     justify-content: space-between;
     padding: 0;
+    margin: 20px auto;
+}
+
+.page-link {
+    color: rgb(110, 110, 110);
+    cursor: pointer;
+}
+
+.active-page-link {
+    color: coral;
+    font-weight: bold;
+}
+
+.prev,
+.next {
+    color: rgb(58, 58, 58);
+    font-weight: bold;
 }
